stop "previous" text from overflowing

--- a/src/less/components/_datagrid-pager.less
+++ b/src/less/components/_datagrid-pager.less
@@ -3,8 +3,4 @@
 
     width: 15%;
     margin: 0 0 0 2px;
-
-    .aisbtn, .dropdownList__pages {
-        .col(32%);
-    }
 }
